- EUREKA: after two-weeks of low-key fretting, worrying, bewilderment, frustration, and finally, a tearful breakdown earlier this afternoon, I re-learned something which I probably needed a reminder about: not to get all "typey" and try to fix "errors" (read: stupid browser/devtools warnings) with fixes I don't understand the implications of (putting "useRef" inside my SideDrawer for instance, which turned out the be the breaking change which has destroyed the dynamic sidebar rendering ever since I discovered said bug DURING MY FINAL CAPSTONE SHOWCASE PRESENTATION, TRULY AN EPIC FAIL); let this all serve as a timely reminder not to just keep manically typing when you've had too much coffee. - side-drawer navigation renders and works more or less as it should/as it did before, thankfully - oh and I removed App.css, as I realized it wasn't doing a goddamn thing; hopefully this isn't another one of those changes I do where I don't see the disastrous consequences which await me. - Go get outside, get off your computer; go draw something or talk to a person about something you both are curious about.
<3, vita xoxo

--- a/client/src/shared/components/UIElements/Card.css
+++ b/client/src/shared/components/UIElements/Card.css
@@ -5,6 +5,5 @@
   border-radius: 6px;
   padding: 1rem;
   overflow: hidden;
-  background-color: inherit;
-  display: inherit;
+  background: white;
 }
